# netbox-windhcp

./: .gitignore  Cargo.toml  LICENSE.md  README.md  netbox-windhcp.cfg
.github/workflows/: rust-release.yml  rust.yml
src/: cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs
src/server/: config.rs  interval.rs  mod.rs  service.rs  shared.rs  signal.rs  sync.rs  web.rs  webhook.rs
src/sync/: config.rs  mac.rs  mod.rs
src/sync/netbox/: address.rs  config.rs  mod.rs  model.rs  prefix.rs  range.rs
src/sync/windhcp/: error.rs  mod.rs  subnet.rs
src/sync/windhcp/subnet/: elements.rs  mod.rs  options.rs  reservation.rs
wix/: LICENSE.rtf  main.wxs
