[package]
name = "netbox-windhcp"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0.29", features = ["derive"] }
ipnet = { version = "2.5.1", features = ["serde"] }
hmac = "0.12.1"
hyper = "0.14.23"
log = { version = "0.4.17", features = ["serde"] }
log4rs = "1.2.0"
num = "0.4.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
sha2 = "0.10.6"
tokio = { version = "1.22.0", features = ["rt", "macros", "rt-multi-thread", "signal", "process", "test-util"] }
warp = { version = "0.3.3", features = ["tokio-rustls", "tls"] }
windows = { version = "0.43.0", features = ["Win32_System_Console", "Win32_Foundation", "Win32_NetworkManagement_Dhcp"] }
windows-service = "0.5.0"
exitcode = "1.1.2"

[dev-dependencies]
libc = "0.2.138"
