[package]
name = "netbox-windhcp"
version = "0.10.0"
edition = "2021"

[features]
rpc_free = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
exitcode = "1.1.2"
git-version = "0.3"
glob = "0.3.1"
hmac = "0.12"
hyper = "0.14"
ipnet = { version = "2", features = ["serde"] }
log = { version = "0.4", features = ["serde"] }
log4rs = { version = "1.3", features = ["rolling_file_appender", "compound_policy", "fixed_window_roller", "size_trigger"] }
num = "0.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "signal", "process", "test-util"] }
ureq = { version = "2", features = ["json", "native-certs"] }
warp = { version = "0.3", features = ["tokio-rustls", "tls"] }
windows = { version = "0", features = ["Win32_System_Console", "Win32_Foundation", "Win32_NetworkManagement_Dhcp"] }
windows-service = "0.6"

[dev-dependencies]
libc = "0.2.140"
